# Tools

./: CMakeLists.txt  CMakePresets.json
AllTools/: CMakeLists.txt  checkservicemarkdelete.cpp  decompress.cpp  detectarch.cpp  forcedelete.cpp  getinstalledproducts.cpp  hold.cpp  listhandle.cpp  removeupperfilter.cpp  runassystem.cpp  shorttolong.cpp  wifiblock.cpp  win32path.cpp  writefiletest.cpp  writeprocessmemory.cpp
Tools/: CMakeLists.txt  calcbase64.cpp  changetime.cpp  curltest.cpp  getinstalledproducts.cpp  shorttolong.cpp  tooltest.cpp
Utils/: CMakeLists.txt
Utils/cli/: CLI11.hpp
Utils/encoding/: EncodingUtils.cpp  EncodingUtils.h
Utils/hash/: md5.cpp  md5.h
Utils/memory/: MemoryUtils.h
Utils/string/: StringUtils.cpp  StringUtils.h
Utils/windows/: WindowsErrorUtils.cpp  WindowsErrorUtils.h  WindowsNtdll.cpp  WindowsNtdll.h  WindowsProcessUtils.cpp  WindowsProcessUtils.h  WindowsRegistryUtils.cpp  WindowsRegistryUtils.h  WindowsUserUtils.cpp  WindowsUserUtils.h  WindowsUtils.h  zw.cpp  zw.h
